<resources>
    <string name="app_name">Task Timer</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="no_task_selected">No Tasks Selected</string>
    <string name="task_name">Task Name</string>
    <string name="task_name_description">The name of the task</string>
    <string name="task_description">Task Description</string>
    <string name="task_description_detail">Description of the task</string>
    <string name="delete_button_description">Button to delete task</string>
    <string name="edit_button_description">Button to edit task details</string>
    <string name="mainmenu_add_task">Add Task</string>
    <string name="mainmenu_show_durations">Durations Report</string>
    <string name="mainmenu_about_app">About TaskTimer</string>
    <string name="mainmenu_generate_data">Generate Data</string>
    <string name="task_sortorder">Task SortOrder</string>
    <string name="addedit_name_hint">Name (required)</string>
    <string name="addedit_description_hint">Description (optional)</string>
    <string name="addedit_sortorder_hint">Sort order</string>
    <string name="addedit_save_button">Save</string>
    <string name="title_activity_add_edit">AddEditActivity</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="deldiag_positive_caption">Delete</string>
    <string name="deldiag_message">Deleting will also delete all timing data associated with task id %1$d: %2$s.</string>
    <string name="cancelEditDiag_message">You have unsaved changes. Do you want to abandon your changes or continue editing?</string>
    <string name="cancelEditDiag_positive_caption">Continue editing</string>
    <string name="cancelEditDiag_negative_caption">Abandon changes</string>
    <string name="about_copyright">Copyright \u00a9 2017 LearnProgramming.academy</string>
    <string name="about_weblink">Instructions available at</string>
    <string name="about_url"><u>www.learnprogramming.academy</u></string>
    <string name="about_weblink_21">Instructions available at www.learnprogramming.academy</string>
    <string name="about_email">For support, email tasktimer@learnprogramming.academy</string>
    <string name="about_credits">Icon derived from <b>analog clock</b> at openclipart.org by <b>Anonymous</b></string>
    <string name="about_close_caption">Close</string>
    <string name="timing_task_name">Timing %1$s</string>
</resources>
